// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioOverview show and handle error message 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root makeStyles-card-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-icon-2 MuiAvatar-colorDefault"
        >
          !
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <h2
          class="MuiTypography-root MuiTypography-h5"
        >
          error.title.undefined
        </h2>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          error.message.default
        </span>
      </div>
    </div>
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2"
      >
        error.message.undefined
      </p>
    </div>
  </div>
</div>
`;

exports[`PortfolioOverview show error without message that cannot be handled 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root makeStyles-card-3 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-avatar"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-icon-4 MuiAvatar-colorDefault"
        >
          !
        </div>
      </div>
      <div
        class="MuiCardHeader-content"
      >
        <h2
          class="MuiTypography-root MuiTypography-h5"
        >
          error.title.undefined
        </h2>
        <span
          class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          error.message.default
        </span>
      </div>
    </div>
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body2"
      >
        error.message.undefined
      </p>
    </div>
  </div>
</div>
`;
